README edited and page responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@600;700&family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400&family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
 
       <header>
         <nav class="nav-bar">
-          <h2 id="header-name">John Doe</h2>    
+          <a href="index.html" id="header-name">John Doe</a>   
           <i id="btn-menu" class="fa-solid fa-bars"></i>
         </nav>
       </header>
@@ -24,9 +24,8 @@
     <section class="hero">
 
       <div class="text">
-        <h1>Hey There. <br> I'm Yosef</h1>
-        <h3>I'am a Software Developer</h3>
-        <p>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, 
+        <h1>Hey There. <br> I’m Alex</h1>
+        <p><span class="Software">I’am a Software Developer</span><br>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, 
         don't hesitate to contact me.</p>
       </div>
 
@@ -37,7 +36,7 @@
         <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
         <li><img src="icons/Medium.png" alt="BigM"></li>
       </ul>
-      
+
     </section>
 
   </div>
