work and about me sections

--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
   <title>My Portfolio</title>
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400&family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400;500;700&family=Poppins&family=Roboto:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div class="container">
+  <section class="container">
 
       <header>
         <nav class="nav-bar">
@@ -21,11 +21,10 @@
         </nav>
       </header>
 
-    <section class="hero">
-
+    <div class="hero">
       <div class="text">
-        <h1>Hey There. <br> I’m Alex</h1>
-        <p><span class="Software">I’am a Software Developer</span><br>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, 
+        <h1 class="greet">Hey There. <br> I’m Alex</h1>
+        <p class="description"><span class="Software">I’am a Software Developer</span><br>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, 
         don't hesitate to contact me.</p>
       </div>
 
@@ -36,11 +35,129 @@
         <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
         <li><img src="icons/Medium.png" alt="BigM"></li>
       </ul>
+    </div>
+  </section>
 
-    </section>
+  <section class="work">
+    <div class="multi-post">
+      <h1 class="multi-header">My Recent Works</h1>
+      <span id="under-line"></span>
+      <img id="first-img" src="icons/images/Img Placeholder1.png" alt="illustration image">
+      <h2 id="multi-head-two">Multi-Post Stories</h2>
+      <p id="multi-paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+      <ul class="multi-list">
+        <li>css</li>
+        <li>html</li>
+        <li>bootstrap</li>
+        <li>Ruby</li>
+      </ul>
+      <button class="multi-btn">See Project</button>
+    </div>
 
-  </div>
+    <div class="professional-art">
+      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+      <ul class="professional-list">
+        <li>html</li>
+        <li>bootstrap</li>
+        <li>Ruby</li>
+      </ul>
+      <button class="prof-btn">See Project</button>
 
+    </div>
+
+    <div class="professional-art">
+      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+      <ul class="professional-list">
+        <li>html</li>
+        <li>bootstrap</li>
+        <li>Ruby</li>
+      </ul>
+      <button class="prof-btn">See Project</button>
+    </div>
+
+    <div class="professional-art">
+      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+      <ul class="professional-list">
+        <li>html</li>
+        <li>bootstrap</li>
+        <li>Ruby</li>
+      </ul>
+      <button class="prof-btn">See Project</button>
+    </div>
+
+    <div class="professional-art">
+      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+      <ul class="professional-list">
+        <li>html</li>
+        <li>bootstrap</li>
+        <li>Ruby</li>
+      </ul>
+      <button class="prof-btn">See Project</button>
+    </div>
+
+    <div class="professional-art">
+      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+      <ul class="professional-list">
+        <li>html</li>
+        <li>bootstrap</li>
+        <li>Ruby</li>
+      </ul>
+      <button class="prof-btn">See Project</button>
+    </div>
+
+    <div class="professional-art">
+      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+      <ul class="professional-list">
+        <li>html</li>
+        <li>bootstrap</li>
+        <li>Ruby</li>
+      </ul>
+      <button class="prof-btn">See Project</button>
+    </div>
+  </section>
+
+  <section class="about-me">
+    <div class="outro">
+      <h1 class="about-head">About me</h1>
+      <p class="about-para">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+      <button class="aboutme-btn">Get My Resume</button>
+    </div>
+
+    <div class="language">
+
+      <ul class="lang-ul">
+        <li class="about-icon">Language</li>
+        <li class="li-itm">Javascript</li>
+        <li class="li-itm">Ruby</li>
+        <li class="li-itm">Html</li>
+        <li class="li-itm">Css</li>
+      </ul>
+
+      <ul class="fame-ul">
+        <li class="frameworks-icon">Frameworks</li>
+        <li class="li-itm">Bootstrap</li>
+        <li class="li-itm">Ruby on Rails</li>
+        <li class="li-itm">RSPec</li>
+        <li class="li-itm">CapyBara</li>
+        <li class="li-itm">Selenium</li>
+      </ul>
+
+      <ul class="skil-ul">
+        <li class="skills">Skills</li>
+        <li class="li-itm">Codekit</li>
+        <li class="li-itm">Github</li>
+        <li class="li-itm">Codepen</li>
+        <li class="li-itm">Gitlab</li>
+        <li class="li-itm">Terminal</li>
+      </ul>
+    </div>
+  </section>
   <script src="https://kit.fontawesome.com/a57ea164e6.js" crossorigin="anonymous"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
