display block deleted

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <button class="multi-btn">See Project</button>
     </div>
 
-    <div class="professional-art">
+    <div class="professional-art art1">
       <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
       <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
       <ul class="professional-list">
@@ -66,7 +66,7 @@
 
     </div>
 
-    <div class="professional-art">
+    <div class="professional-art art2">
       <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
       <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
       <ul class="professional-list">
@@ -77,7 +77,7 @@
       <button class="prof-btn">See Project</button>
     </div>
 
-    <div class="professional-art">
+    <div class="professional-art art3">
       <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
       <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
       <ul class="professional-list">
@@ -88,7 +88,7 @@
       <button class="prof-btn">See Project</button>
     </div>
 
-    <div class="professional-art">
+    <div class="professional-art art4">
       <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
       <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
       <ul class="professional-list">
@@ -99,7 +99,7 @@
       <button class="prof-btn">See Project</button>
     </div>
 
-    <div class="professional-art">
+    <div class="professional-art art5">
       <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
       <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
       <ul class="professional-list">
@@ -110,7 +110,7 @@
       <button class="prof-btn">See Project</button>
     </div>
 
-    <div class="professional-art">
+    <div class="professional-art art6">
       <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
       <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
       <ul class="professional-list">
