header part for contact section

--- a/index.html
+++ b/index.html
@@ -158,6 +158,13 @@
       </ul>
     </div>
   </section>
+
+  <section class="contact-form">
+    <h3 class="contact-header">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
+    
+
+
+  </section>
   <script src="https://kit.fontawesome.com/a57ea164e6.js" crossorigin="anonymous"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
