--- a/index.html
+++ b/index.html
@@ -167,9 +167,17 @@
       <textarea maxlength="500" name="description" placeholder="Enter text here" class="form-input form-textarea" rows="5"required ></textarea>
       <button type="submit" class="submit-btn">Get in touch</button>
     </form>
-
-
   </section>
+
+  <footer>
+    <ul class="footer-icons">
+      <li><a href="https://github.com/Yosefgeda"><img src="icons/GitHub.png" alt="github logo"></a></li>
+      <li><a href="www.linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
+      <li><img src="icons/Angelist.png" alt="angel loist"></li>
+      <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
+      <li><img src="icons/Medium.png" alt="BigM"></li>
+    </ul>
+  </footer>
   <script src="https://kit.fontawesome.com/a57ea164e6.js" crossorigin="anonymous"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
