--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
   </section>
 
   <section class="contact-section">
-    <h3 class="contact-header">I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
+    <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
     <form action="https://formspree.io/f/mknagrvq" method="POST" class="contact-form">
       <input type="text" name="name" maxlength="30" placeholder="Full name" class="form-input" required />
       <input type="email" name="email" placeholder="Email address" class="form-input"required />
@@ -177,7 +177,9 @@
       <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
       <li><img src="icons/Medium.png" alt="BigM"></li>
     </ul>
+    <span class="footer-line"><hr></span>
   </footer>
+  
   <script src="https://kit.fontawesome.com/a57ea164e6.js" crossorigin="anonymous"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
