hover effect on buttons

--- a/index.html
+++ b/index.html
@@ -162,23 +162,24 @@
   <section class="contact-section">
     <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
     <form action="https://formspree.io/f/mknagrvq" method="POST" class="contact-form">
-      <input type="text" name="name" maxlength="30" placeholder="Full name" class="form-input" required />
+      <input type="text" name="name" maxlength="30" class="form-input" placeholder="Full name" required />
       <input type="email" name="email" placeholder="Email address" class="form-input"required />
       <textarea maxlength="500" name="description" placeholder="Enter text here" class="form-input form-textarea" rows="5"required ></textarea>
       <button type="submit" class="submit-btn">Get in touch</button>
     </form>
-  </section>
+  
 
-  <footer>
-    <ul class="footer-icons">
-      <li><a href="https://github.com/Yosefgeda"><img src="icons/GitHub.png" alt="github logo"></a></li>
-      <li><a href="www.linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
-      <li><img src="icons/Angelist.png" alt="angel loist"></li>
-      <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
-      <li><img src="icons/Medium.png" alt="BigM"></li>
-    </ul>
-    <span class="footer-line"><hr></span>
-  </footer>
+    <footer>
+      <ul class="footer-icons">
+        <li><a href="https://github.com/Yosefgeda"><img src="icons/GitHub.png" alt="github logo"></a></li>
+        <li><a href="www.linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
+        <li><img src="icons/Angelist.png" alt="angel loist"></li>
+        <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
+        <li><img src="icons/Medium.png" alt="BigM"></li>
+      </ul>
+      <span class="footer-line"><hr></span>
+    </footer>
+  </section>
   
   <script src="https://kit.fontawesome.com/a57ea164e6.js" crossorigin="anonymous"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
