--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <nav class="nav-bar">
           <a href="index.html" id="header-name">John Doe</a>   
           <i id="btn-menu" class="fa-solid fa-bars"></i>
+          <a href="#" class="nav-link">Portfolio</a>
+          <a href="#" class="nav-link">About</a>
+          <a href="#" class="nav-link">Contact</a>
+          <a href="#" class="nav-link"><i class="fa-regular fa-envelope"></i></a>
         </nav>
       </header>
 
@@ -39,22 +43,25 @@
   </section>
 
   <section class="work">
+    <h1 class="multi-header">My Recent Works</h1>
     <div class="multi-post">
-      <h1 class="multi-header">My Recent Works</h1>
-      <span id="under-line"></span>
+      
       <img id="first-img" src="icons/images/Img Placeholder1.png" alt="illustration image">
-      <h2 id="multi-head-two">Multi-Post Stories</h2>
-      <p id="multi-paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-      <ul class="multi-list">
-        <li>css</li>
-        <li>html</li>
-        <li>bootstrap</li>
-        <li>Ruby</li>
-      </ul>
-      <button class="multi-btn">See Project</button>
+        <div class="desktop">
+          <h2 id="multi-head-two">Multi-Post Stories</h2>
+          <p id="multi-paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required. 
+            has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
+          <ul class="multi-list">
+            <li>css</li>
+            <li>html</li>
+            <li>bootstrap</li>
+            <li>Ruby</li>
+          </ul>
+          <button class="multi-btn">See Project</button>
+      </div>
     </div>
 
-    <div class="professional-art art1">
+    <div class="professional-art art1 prt">
       <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
       <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
       <ul class="professional-list">
