--- a/index.html
+++ b/index.html
@@ -43,97 +43,111 @@
   </section>
 
   <section class="work">
-    <h1 class="multi-header">My Recent Works</h1>
-    <div class="multi-post">
-      
-      <img id="first-img" src="icons/images/Img Placeholder1.png" alt="illustration image">
-        <div class="desktop">
+    <div class="multi-header-container">
+      <h1 class="multi-header">My Recent Works</h1>
+      <div class="line"></div>
+    </div>
+    <div class="work-container">
+      <div class="multi-post">
+        <img src="icons/images/Img Placeholder1.png" alt="illustration image">
+        <div>
           <h2 id="multi-head-two">Multi-Post Stories</h2>
-          <p id="multi-paragraph">A daily selection of privately personalized reads; no accounts or sign-ups required. 
-            has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.</p>
-          <ul class="multi-list">
+          <p>
+            A daily selection of privately personalized reads; no accounts or sign-ups required. 
+            has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a standard dummy text.
+          </p>
+          <ul>
             <li>css</li>
             <li>html</li>
             <li>bootstrap</li>
             <li>Ruby</li>
           </ul>
           <button class="multi-btn">See Project</button>
+        </div>
       </div>
-    </div>
+  
+      <div class="professional-art art1 prt">
+        <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+        <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+        <ul class="professional-list">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <button class="prof-btn">See Project</button>
+  
+      </div>
 
-    <div class="professional-art art1 prt">
-      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
-      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-      <ul class="professional-list">
-        <li>html</li>
-        <li>bootstrap</li>
-        <li>Ruby</li>
-      </ul>
-      <button class="prof-btn">See Project</button>
-
-    </div>
-
-    <div class="professional-art art2">
-      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
-      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-      <ul class="professional-list">
-        <li>html</li>
-        <li>bootstrap</li>
-        <li>Ruby</li>
-      </ul>
-      <button class="prof-btn">See Project</button>
-    </div>
-
-    <div class="professional-art art3">
-      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
-      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-      <ul class="professional-list">
-        <li>html</li>
-        <li>bootstrap</li>
-        <li>Ruby</li>
-      </ul>
-      <button class="prof-btn">See Project</button>
-    </div>
-
-    <div class="professional-art art4">
-      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
-      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-      <ul class="professional-list">
-        <li>html</li>
-        <li>bootstrap</li>
-        <li>Ruby</li>
-      </ul>
-      <button class="prof-btn">See Project</button>
-    </div>
-
-    <div class="professional-art art5">
-      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
-      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-      <ul class="professional-list">
-        <li>html</li>
-        <li>bootstrap</li>
-        <li>Ruby</li>
-      </ul>
-      <button class="prof-btn">See Project</button>
-    </div>
-
-    <div class="professional-art art6">
-      <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
-      <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
-      <ul class="professional-list">
-        <li>html</li>
-        <li>bootstrap</li>
-        <li>Ruby</li>
-      </ul>
-      <button class="prof-btn">See Project</button>
+      <div class="professional-art art2">
+        <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+        <h2 class="pro-head">Data Dashboard <br> Healthcare</h2>
+        <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+        <ul class="professional-list">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <button class="prof-btn">See Project</button>
+      </div>
+  
+      <div class="professional-art art3">
+        <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+        <h2 class="pro-head">Website Protfolio</h2>
+        <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+        <ul class="professional-list">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <button class="prof-btn">See Project</button>
+      </div>
+  
+      <div class="professional-art art4">
+        <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+        <h2 class="pro-head">Profesional Art <br> Printing Data More</h2>
+        <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+        <ul class="professional-list">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <button class="prof-btn">See Project</button>
+      </div>
+  
+      <div class="professional-art art5">
+        <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+        <h2 class="pro-head">Data Dashboard <br> Healthcare</h2>
+        <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+        <ul class="professional-list">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <button class="prof-btn">See Project</button>
+      </div>
+  
+      <div class="professional-art art6">
+        <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+        <h2 class="pro-head">Website Protfolio</h2>
+        <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
+        <ul class="professional-list">
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <button class="prof-btn">See Project</button>
+      </div>
     </div>
   </section>
 
   <section class="about-me">
-    <div class="outro">
-      <h1 class="about-head">About me</h1>
-      <p class="about-para">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
-      <button class="aboutme-btn">Get My Resume</button>
+    <div class="about">
+      <div class="outro">
+        <h1 class="about-head">About me</h1>
+        <p class="about-para">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+        <button class="aboutme-btn">Get My Resume</button>
+      </div>
+        <img src="icons/images/desktop/illustration-about me.png" alt="About me illustration" class="aboutme-img">
     </div>
 
     <div class="language">
@@ -167,14 +181,15 @@
   </section>
 
   <section class="contact-section">
-    <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
-    <form action="https://formspree.io/f/mknagrvq" method="POST" class="contact-form">
-      <input type="text" name="name" maxlength="30" class="form-input" placeholder="Full name" required />
-      <input type="email" name="email" placeholder="Email address" class="form-input"required />
-      <textarea maxlength="500" name="description" placeholder="Enter text here" class="form-input form-textarea" rows="5"required ></textarea>
-      <button type="submit" class="submit-btn">Get in touch</button>
-    </form>
-  
+    <div class="contact-form-container">
+      <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
+      <form action="https://formspree.io/f/mknagrvq" method="POST" class="contact-form">
+        <input type="text" name="name" maxlength="30" class="form-input" placeholder="Full name" required />
+        <input type="email" name="email" placeholder="Email address" class="form-input"required />
+        <textarea maxlength="500" name="description" placeholder="Enter text here" class="form-input form-textarea" rows="5"required ></textarea>
+        <button type="submit" class="submit-btn">Get in touch</button>
+      </form>
+    </div>
 
     <footer>
       <ul class="footer-icons">
