Hover for cards and buttons.

--- a/index.html
+++ b/index.html
@@ -16,12 +16,14 @@
 
       <header>
         <nav class="nav-bar">
-          <a href="index.html" id="header-name">John Doe</a>   
-          <i id="btn-menu" class="fa-solid fa-bars"></i>
-          <a href="#" class="nav-link">Portfolio</a>
-          <a href="#" class="nav-link">About</a>
-          <a href="#" class="nav-link">Contact</a>
-          <a href="#" class="nav-link"><i class="fa-regular fa-envelope"></i></a>
+            <a href="index.html" id="header-name">John Doe</a>   
+            <i id="btn-menu" class="fa-solid fa-bars"></i>
+          <ul>
+            <li><a href="#Portfolio" class="nav-link">Portfolio</a></li>
+            <li><a href="#aboout" class="nav-link">About</a></li>
+            <li><a href="#cntct" class="nav-link">Contact</a></li>
+            <li><a href="" class="nav-link"><i class="fa-regular fa-envelope"></i></a></li>
+         </ul>
         </nav>
       </header>
 
@@ -42,7 +44,7 @@
     </div>
   </section>
 
-  <section class="work">
+  <section id="Portfolio" class="work">
     <div class="multi-header-container">
       <h1 class="multi-header">My Recent Works</h1>
       <div class="line"></div>
@@ -140,7 +142,7 @@
     </div>
   </section>
 
-  <section class="about-me">
+  <section id="aboout" class="about-me">
     <div class="about">
       <div class="outro">
         <h1 class="about-head">About me</h1>
@@ -180,7 +182,7 @@
     </div>
   </section>
 
-  <section class="contact-section">
+  <section id="cntct" class="contact-section">
     <div class="contact-form-container">
       <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
       <form action="https://formspree.io/f/mknagrvq" method="POST" class="contact-form">
