Change image on hover

--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
   
       <div class="professional-art art1 prt">
         <h2 class="prof-header">Profesional Art <br> Printing Data</h2>
+        <h2 class="pro-head">Profesional Art <br> Printing Data More</h2>
         <p class="multi-paragraph-card">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</p>
         <ul class="professional-list">
           <li>html</li>
@@ -149,7 +150,7 @@
         <p class="about-para">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
         <button class="aboutme-btn">Get My Resume</button>
       </div>
-        <img src="icons/images/desktop/illustration-about me.png" alt="About me illustration" class="aboutme-img">
+        
     </div>
 
     <div class="language">
