--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
       <ul class="icons">
         <li><a href="https://github.com/Yosefgeda"><img src="icons/GitHub.png" alt="github logo"></a></li>
-        <li><a href="www.linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
+        <li><a href="https://linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
         <li><img src="icons/Angelist.png" alt="angel loist"></li>
-        <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
+        <li><a href="https://twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
         <li><img src="icons/Medium.png" alt="BigM"></li>
       </ul>
     </div>
@@ -197,9 +197,9 @@
     <footer>
       <ul class="footer-icons">
         <li><a href="https://github.com/Yosefgeda"><img src="icons/GitHub.png" alt="github logo"></a></li>
-        <li><a href="www.linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
+        <li><a href="https://linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
         <li><img src="icons/Angelist.png" alt="angel loist"></li>
-        <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
+        <li><a href="https://twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
         <li><img src="icons/Medium.png" alt="BigM"></li>
       </ul>
       <span class="footer-line"><hr></span>
