Added loom link to readme file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
       <header>
         <nav class="nav-bar">
-            <a href="index.html" id="header-name">John Doe</a>   
+            <a href="index.html" id="header-name">Yosef Geda</a>   
             <i id="btn-menu" class="fa-solid fa-bars"></i>
           <ul>
             <li><a href="#Portfolio" class="nav-link">Portfolio</a></li>
@@ -29,16 +29,16 @@
 
     <div class="hero">
       <div class="text">
-        <h1 class="greet">Hey There. <br> I’m Alex</h1>
+        <h1 class="greet">Hey There. <br> I’m Yosef</h1>
         <p class="description"><span class="Software">I’am a Software Developer</span><br>I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, 
         don't hesitate to contact me.</p>
       </div>
 
       <ul class="icons">
         <li><a href="https://github.com/Yosefgeda"><img src="icons/GitHub.png" alt="github logo"></a></li>
-        <li><a href="https://linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
+        <li><a href="www.linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
         <li><img src="icons/Angelist.png" alt="angel loist"></li>
-        <li><a href="https://twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
+        <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
         <li><img src="icons/Medium.png" alt="BigM"></li>
       </ul>
     </div>
@@ -197,9 +197,9 @@
     <footer>
       <ul class="footer-icons">
         <li><a href="https://github.com/Yosefgeda"><img src="icons/GitHub.png" alt="github logo"></a></li>
-        <li><a href="https://linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
+        <li><a href="www.linkedin.com/in/yosefgeda"><img src="icons/Linkedin.png" alt="linkedin logo"></a></li>
         <li><img src="icons/Angelist.png" alt="angel loist"></li>
-        <li><a href="https://twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
+        <li><a href="twitter.com/yosefgeda"><img src="icons/Twitter.png" alt="twitter logo"></a></li>
         <li><img src="icons/Medium.png" alt="BigM"></li>
       </ul>
       <span class="footer-line"><hr></span>
