Portfolio Menu Layout Design

--- a/index.html
+++ b/index.html
@@ -27,6 +27,29 @@
         </nav>
       </header>
 
+        <div id="mobile-menu-modal" class="toogleModalDisplay">
+          <div id="mobile-menu">
+            <div id="modal-close-icon">
+              <img
+                src="./icons/modal-close-icon.png"
+                alt="close-mobile-menu"
+                width="20rem"
+              />
+            </div>
+            <ul>
+              <li>
+                <a class="mobile-menu-link" href="#Portfolio">Portoflio</a>
+              </li>
+              <div class="mobile-menu-separator"></div>
+              <li><a class="mobile-menu-link" href="#aboout">About</a></li>
+              <div class="mobile-menu-separator"></div>
+              <li><a class="mobile-menu-link" href="#cntct">Contact</a></li>
+              <div class="mobile-menu-separator"></div>
+            </ul>
+          </div>
+          <div id="mobile-menu-bottom"></div>
+        </div>
+
     <div class="hero">
       <div class="text">
         <h1 class="greet">Hey There. <br> I’m Yosef</h1>
@@ -206,6 +229,8 @@
     </footer>
   </section>
   
+
+  <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/a57ea164e6.js" crossorigin="anonymous"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
