add javascript mobile menu functions

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 width="20rem"
               />
             </div>
-            <ul>
+            <ul id="menu-link">
               <li>
                 <a class="mobile-menu-link" href="#Portfolio">Portoflio</a>
               </li>
@@ -230,9 +230,9 @@
   </section>
   
 
-  <script src="script.js"></script>
   <script src="https://kit.fontawesome.com/a57ea164e6.js" crossorigin="anonymous"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
