--- a/index.html
+++ b/index.html
@@ -115,12 +115,14 @@
   <section id="cntct" class="contact-section">
     <div class="contact-form-container">
       <h3>I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.</h3>
-      <form action="https://formspree.io/f/mknagrvq" method="POST" class="contact-form">
+      <form id="form" action="https://formspree.io/f/mknagrvq" method="POST" class="contact-form">
         <input type="text" name="name" maxlength="30" class="form-input" placeholder="Full name" required />
-        <input type="email" name="email" placeholder="Email address" class="form-input"required />
+        <input id="validate-mail" type="email" name="email" placeholder="Email address"  class="form-input"required />
         <textarea maxlength="500" name="description" placeholder="Enter text here" class="form-input form-textarea" rows="5"required ></textarea>
         <button type="submit" class="submit-btn">Get in touch</button>
+        <span id="text"><h4></h4></span>
       </form>
+      
     </div>
 
     <footer>
