--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
     </div>
   </section>
 
+  
+
   <section id="Portfolio" class="work">
     <div class="multi-header-container">
       <h1 class="multi-header">My Recent Works</h1>
@@ -76,7 +78,10 @@
     <div class="about">
       <div class="outro">
         <h1 class="about-head">About me</h1>
-        <p class="about-para">Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</p>
+        <p class="about-para">Hello I’m a software developer! I can help you build a product,
+          feature or website Look through some of my work and experience! 
+          If you like what you see and have a project you need coded, don’t hestiate to contact me.
+        </p>
         <button class="aboutme-btn">Get My Resume</button>
       </div>
         
