--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Portfolio</title>
+
+  <meta name="description" content="Yosef Geda Portfolio site">
+  <meta name="keywords" content="software engineer, Yosef Geda, Portfolio, full stack developer">
+  <meta name="title" property="og:title" content="Yosef Geda software engineer Portfolio site">
+  <meta property="og:type" content="website">
+  <meta name="image" property="og:image" content="./icons/screenshot/portfolioMeta.jpg">
+  <meta name="description" property="og:description" content="Yosef Geda Portfolio site">
+  <meta name="author" content="Yosef Geda">
+
   <link rel="stylesheet" href="style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -65,15 +74,45 @@
     </div>
   </section>
 
-  
-
-  <section id="Portfolio" class="work">
+  <section class="ethio-arts">
     <div class="multi-header-container">
       <h1 class="multi-header">My Recent Works</h1>
       <div class="line"></div>
     </div>
+  
+    <div class="multi-post">
+      <div class="img-next">
+        <img src="icons/screenshot/Untitled.jpg" class="multi-img">
+
+      </div>
+      
+      <div class="inner-multi-post">
+        <h2 class="multi-head-two">Ethio-arts and Events</h2>
+        <p class="daily-selection">
+          A daily selection of privately personalized reads; 
+          no accounts or sign-ups required. has been the industry's 
+          standard dummy text ever since the 1500s, 
+          when an unknown printer took a standard dummy text.
+        </p>
+        <ul>
+          <li>css</li>
+          <li>html</li>
+          <li>bootstrap</li>
+          <li>Ruby</li>
+        </ul>
+        <button class="multi-btn popup-btn">See Project</button>
+      </div>
+    </div>
+  </section>
+  
+
+  
+
+  <section id="Portfolio" class="work">
+    
   </section>
 
+  
   <section id="aboout" class="about-me">
     <div class="about">
       <div class="outro">
