--- a/index.html
+++ b/index.html
@@ -158,6 +158,6 @@
  <script src="https://kit.fontawesome.com/a57ea164e6.js" crossorigin="anonymous"></script>
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
-  <script src="./script.js"></script>
+  <script src="./script.js" type="module"></script>
 </body>
 </html>
